# Aurora

./: .env.example  Cargo.toml  README.md
src/: constants.rs  events.rs  main.rs
src/commands/: action.rs  bio.rs  eight_ball.rs  kill.rs  mod.rs  rate.rs  ship.rs
src/database/: action.rs  level_role.rs  member.rs  mod.rs  setting.rs  shared_role.rs  ship.rs
src/util/: context.rs  helper.rs
