[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
dashmap = "5.3.4"
deadpool-postgres = "0.10.2"
dotenv = "0.15.0"
futures-util = "0.3.21"
hyper = "0.14.19"
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.19.2" }
tokio-postgres = { features = ["with-chrono-0_4"], version = "0.7.6" }
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log"], version = "0.3.11" }
twilight-cache-inmemory = { features = ["permission-calculator"], version = "0.11.0" }
twilight-gateway = "0.11.0"
twilight-http = "0.11.0"
twilight-interactions = "0.11.0"
twilight-model = "0.11.0"
twilight-util = { features = ["builder"], version = "0.11.0" }

[package]
edition = "2021"
name = "aurora"
version = "0.1.0"